--- a/main.css
+++ b/main.css
@@ -62,6 +62,10 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #F2545B;
+}
+
 main {
     margin: 3em;
 }
@@ -70,8 +74,10 @@ section {
     margin: 1em 1em 6em 1em;
 }
 
-section h2{
+section h2 {
+    font-size: xx-large;
     color: #00326F;
+    padding-bottom: 1em;
     margin-bottom: 1em;
     border-bottom: solid 1px;
 }
@@ -88,16 +94,16 @@ h2.right {
 
 .appraisals {
     display: grid;
-    gap: 2%;
+    gap: 3%;
     grid-template-areas: 
     "tl tl tr"
     "dl dr dr";
 }
 
-.top-left { grid-area: tl;}
-.top-righ { grid-area: tr; }
-.down-left { grid-area: dl; }
-.down-right { grid-area: dr; }
+.top-left { grid-area: tl; align-self: center;}
+.top-righ { grid-area: tr; align-self: center;}
+.down-left { grid-area: dl; align-self: center;}
+.down-right { grid-area: dr; align-self: center;}
 
 .appraisals h3 {
     font-weight: 400;
@@ -111,9 +117,7 @@ h2.right {
 
 .appraisal {
     border-radius: 30px;
-    padding-left: 2em;
-    padding-right: 1em;
-    padding-top: 1em;
+    padding: 3em 1em 0em 2em;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
