--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>REKON</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300">
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
+  {{- with resources.Get "main.css" }}
+  <link rel="stylesheet" type="text/css" href="{{ .RelPermalink }}">
+  {{- end }}</head>
 <body>
   <header>
-    <img src="logo.svg"></img>
+    <img src="images/logo.svg"></img>
     <nav>
       <ol>
         <li><a href="#security">Security</a></li>
@@ -32,19 +33,19 @@
       <div class="appraisals">
         <div class="appraisal top-left">
           <h3>“Simon's security audit on our wallet component saved us money before going to any ANSSI certification.”</h3>
-          <div class="position"><span>Fred de Matos - VP of Engineering, Rockside</span><img src="rockside-logo.png"></img></div>
+          <div class="position"><span>Fred de Matos - VP of Engineering, Rockside</span><img src="images/rockside-logo.png"></img></div>
         </div>
         <div class="appraisal top-right">
           <h3>“Rekon tools and analysis allowed Edulib to detect and remove a open redirect to a phishing website.”</h3>
-          <div class="position"><span>Emilie Barreau - Director, Edulib</span><img src="edulib-logo.png"></img></div>
+          <div class="position"><span>Emilie Barreau - Director, Edulib</span><img src="images/edulib-logo.png"></img></div>
         </div>
         <div class="appraisal down-left">
           <h3>“Rekon gave us a complete overview of our public infrastructure so that we could simplify greatly its architecture and remove obsolete resources”</h3>
-          <div class="position"><span>Eric Herve - CTO, Edulib</span><img src="edulib-logo.png"></img></div>
+          <div class="position"><span>Eric Herve - CTO, Edulib</span><img src="images/edulib-logo.png"></img></div>
         </div>
         <div class="appraisal down-right">
           <h3>“We have strengthened and formalized our SDLC thanks to Simon. It enabled us to bump the security of our processes and set-up tools to ensure it stays secured”</h3>
-          <div class="position"><span>Jeff - Information Security Officer, Hivebrite</span><img src="hivebrite-logo.png"></img></div>
+          <div class="position"><span>Jeff - Information Security Officer, Hivebrite</span><img src="images/hivebrite-logo.png"></img></div>
         </div>
     </div>
     </section>
