--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,69 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rekon Software & Security</title>
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300">
-  {{- with resources.Get "main.css" }}
-  <link rel="stylesheet" type="text/css" href="{{ .RelPermalink }}">
-  {{- end }}</head>
-<body>
-  <header>
-    <div class="top">
-      <img src="images/logo.png"></img>
-      <nav>
-        <ul>
-          <li><a href="#security">Security</a></li>
-          <li><a href="#development">Development</a></li>
-          <li><a href="#training">Training</a></li>
-          <li><a href="#product">Product</a></li>
-        </ul>
-      </nav>
-    </div>
-</header>
-  <main>
-    <section id="rekon">
-        <p>Simple, modern software.</p>
-        <p>Continuous security.</p>
-    </section>
+{{ define "header" }}    
+<div class="top">
+  <img src="/images/logo.png"></img>
+  <nav>
+    <ul>
+      <li><a href="#security">Security</a></li>
+      <li><a href="#development">Development</a></li>
+      <li><a href="/workshops">Workshops</a></li>
+      <li><a href="#product">Product</a></li>
+    </ul>
+  </nav>
+</div>
+{{ end }}
 
-    <section id="security">
-      <h2 class="left">Security</h2>
-      <p class="text-center">Securing products at the right level. Component audits, infra and cloud analysis, code reviews.</p>
-      <div class="appraisals">
-        <div class="appraisal top-left">
-          <h3>“Simon's security audit on our wallet component saved us money before going to any ANSSI certification.”</h3>
-          <div class="position"><span>Fred de Matos - VP of Engineering, Rockside</span><img src="images/rockside-logo.png"></img></div>
-        </div>
-        <div class="appraisal top-right">
-          <h3>“Rekon tools and analysis allowed Edulib to detect and remove a open redirect to a phishing website.”</h3>
-          <div class="position"><span>Emilie Barreau - Director, Edulib</span><img src="images/edulib-logo.png"></img></div>
-        </div>
-        <div class="appraisal down-left">
-          <h3>“Rekon gave us a complete overview of our public infrastructure so that we could simplify greatly its architecture and remove obsolete resources”</h3>
-          <div class="position"><span>Eric Herve - CTO, Edulib</span><img src="images/edulib-logo.png"></img></div>
-        </div>
-        <div class="appraisal down-right">
-          <h3>“We have strengthened and formalized our SDLC thanks to Simon. It enabled us to bump the security of our processes and set-up tools to ensure it stays secured”</h3>
-          <div class="position"><span>Jeff - Information Security Officer, Hivebrite</span><img src="images/hivebrite-logo.png"></img></div>
-        </div>
+{{ define "main" }}
+  <section id="rekon">
+      <p>Simple, modern software.</p>
+      <p>Continuous security.</p>
+  </section>
+
+  <section id="security">
+    <h2 class="left">Security</h2>
+    <p class="text-center">Securing products at the right level.</p>
+    <ul>
+      <li>Component audits</li>
+      <li>Infra and cloud analysis</li>
+      <li>Code reviews</li>
+    </ul>
+    <div class="center"><a class="button" href="#">Our offers</a></div>
+    <div class="appraisals">
+      <div class="appraisal top-left">
+        <h3>“Simon's security audit on our wallet component saved us money before going to any ANSSI certification.”</h3>
+        <div class="position"><span>Fred de Matos - VP of Engineering, Rockside</span><img src="images/rockside-logo.png"></img></div>
       </div>
-    </section>
-    <section id="development">
-      <h2>Development</h2>
-      <p>Expertise to delivers scalable and secure products.</p>
-    </section>
-    <section id="training">
-      <h2 class="right">Workshops and training</h2>
-    </section>
-    <section id="product">
-      <h2>Product</h2>
-    </section>
-  </main>
-  <footer>
-    Rekon Software and Security &copy; {{ now.Year }} - All rights reserved
-  </footer>
-</body>
-</html>
+      <div class="appraisal top-right">
+        <h3>“Rekon tools and analysis allowed Edulib to detect and remove a open redirect to a phishing website.”</h3>
+        <div class="position"><span>Emilie Barreau - Director, Edulib</span><img src="images/edulib-logo.png"></img></div>
+      </div>
+      <div class="appraisal down-left">
+        <h3>“Rekon gave us a complete overview of our public infrastructure so that we could simplify greatly its architecture and remove obsolete resources”</h3>
+        <div class="position"><span>Eric Herve - CTO, Edulib</span><img src="images/edulib-logo.png"></img></div>
+      </div>
+      <div class="appraisal down-right">
+        <h3>“We have strengthened and formalized our SDLC thanks to Simon. It enabled us to bump the security of our processes and set-up tools to ensure it stays secured”</h3>
+        <div class="position"><span>Jeff - Information Security Officer, Hivebrite</span><img src="images/hivebrite-logo.png"></img></div>
+      </div>
+    </div>
+  </section>
+  <section id="development">
+    <h2>Development</h2>
+    <p>Expertise to delivers scalable and secure products.</p>
+  </section>
+  <section id="training">
+    <h2 class="right">Workshops and training</h2>
+    <p>Learn Production Go in our hands-on 2 days workshops</p>
+    <p></p>
+    <ul>
+      <li>Latest professional test driven Go</li>
+      <li>Seasoned Trainers</li>
+      <li>1 week post support</li>
+    </ul>
+    <div class="center"><a class="button" href="/workshops">See our workshops!</a></div>
+  </section>
+  <section id="product">
+    <h2>Product</h2>
+  </section>
+{{ end }}
