add workshop one

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,6 +18,6 @@
     {{ block "main" . }}{{ end }}
   </main>
 
-  <footer>Rekon Software and Security &copy; {{ now.Year }} - All rights reserved</footer>
+  <footer>Rekon Security and Software  &copy; {{ now.Year }} - All rights reserved</footer>
 </body>
 </html>
