--- a/layouts/workshops/section.html
+++ b/layouts/workshops/section.html
@@ -28,4 +28,55 @@
             <p>Via video calls sessions we address together your challenges.</p>
         </div>
     </div>
+    <h1 class="text-center">Workshop 1 - Start Go by implementing a real life project</h1>
+    <div class="tiles">
+      <div class="tile">
+          <h4>Audience</h4>
+          <p>No prior knowledge of Go is necessary. But you are fluent in another programming language.</p>
+      </div>
+      <div class="tile">
+          <h4>Objectives</h4>
+          <p>By the end of this workshop you will have implemented advanced functionalities on a incrementally elaborated real life product.</p>
+          <p>You will have used key packages from the standard library, and learned how to compose them together.</p>
+          <p>You will be able to use the testing package in order to test your own code, and learn testing tips along the way.</p>
+      </div>
+      <div class="tile">
+          <h4>Content</h4>
+          <p>During this 2 days workshop, we will build together a incrementally complex devops tool with production quality code.</p>
+          <p>Along with you doing the implementation accompanied, trainers will provide help, hints to guide you and also demo the basics and key concepts in Go.</p>
+      </div>
+    </div>
+    <h2>What you will learn to apply</h2>
+    <div class="tiles">
+      <div class="tile">
+          <h4>Testing packages</h4>
+          <p>Testing is key in the Go ecosystem, and the standard library offers a lot.</p>
+          <p>We will ensure we go through all the often overlooked methods from the package that will make you testing code simpler.</p>
+      </div>
+      <div class="tile">
+          <h4>Go system programming</h4>
+          <p>By leveraging Go local system packages (os, fs, exec, signal, etc.), we will code reliable and simple solutions to interact with the local system.</p>
+          <p>It will show you how to to implement in the future your own awesome and testable CLI.</p>
+      </div>
+      <div class="tile">
+          <h4>Functional principles in Go</h4>
+          <p>By making function first class citizen, Go allow us to have better design. This is essential to sound Go programming.</p>
+          <p>We will leverage that to make our devops tool much simpler and with more flexible and open code.</p>
+      </div>
+    </div>
+    <div class="tiles">
+      <div class="tile">
+        <h4>Go tips & tricks</h4>
+        <p>During those 2 days, many everyday tips and tricks from professionals will be distilled, the ones used at our daily jobs!</p>
+      </div>
+      <div class="tile">
+        <h4>Integration testing</h4>
+        <p>Learn how Go render integration testing easier.</p>
+        <p>Through the implementation of a real devops tool, let's ensure our code works with a few integration high level tests that will be simple and deterministic.</p>
+      </div>
+      <div class="tile">
+        <h4>Demos and explanations</h4>
+        <p>Intermittent to the coding of our product and tool, you will be able to sit back and watch demos and explanations on key concepts for your mastery of Go.</p>
+      </div>
+    </div>
 {{ end }}
