add workshop number two

--- a/layouts/workshops/section.html
+++ b/layouts/workshops/section.html
@@ -28,6 +28,9 @@
             <p>Via video calls sessions we address together your challenges.</p>
         </div>
     </div>
+    
+    <hr />
+
     <h1 class="text-center">Workshop 1 - Start Go by implementing a real life project</h1>
     <div class="tiles">
       <div class="tile">
@@ -79,4 +82,72 @@
         <p>Intermittent to the coding of our product and tool, you will be able to sit back and watch demos and explanations on key concepts for your mastery of Go.</p>
       </div>
     </div>
+
+    <hr />
+
+    <h1 class="text-center">Workshop 2 - Intermediates - Writing and testing Go production code</h1>
+    <div class="tiles">
+      <div class="tile">
+          <h4>Audience</h4>
+          <p>You have a good overview of what is Go but you have not used it much in production systems, and/or you have not leveraged yet all its package and powerful features as a language and ecosystem.</p>
+          <p>You want to start learning and/or improve your Test Driven Development in Go.</p>
+          <p>Ideally, you have completed workshop 1 and/or have an equivalent experience.</p>
+      </div>
+      <div class="tile">
+          <h4>Objectives</h4>
+          <p>You will learn to use less code to produce more robust production implementations.</p>
+          <p>We will leverage the standard Go library and it most important packages to the fullest, learning common and useful techniques and patterns along the way.</p>
+          <p>You will become a proficient Go tester of your own code.</p>
+      </div>
+      <div class="tile">
+          <h4>Content</h4>
+          <p>During this 2 days workshop, we will build together our own application with production quality code.</p>
+          <p>The application built will be multi faceted to allow for the learning of various powerful and common Go techniques, and therefore going over the most important and useful part of the Go standard library.</p>
+          <p>As of today, the Go ecosystem requires great knowledge in testing your own code! So throughout the workshop we introduce and teach you how to test drive your features professionally.</p>
+      </div>
+    </div>
+    <h2>What you will learn to apply</h2>
+    <div class="tiles">
+      <div class="tile">
+          <h4>Test Driven Development</h4>
+          <p>Throughout our workshop most of our features will be implemented using TDD techniques. We will introduce and explained how best to do that in Go using the standard library.</p>
+      </div>
+      <div class="tile">
+          <h4>Master testing packages</h4>
+          <p>We will learn how to leverage the various testing/benching package and concepts provided by the standard library. Automated/scoped cleanups, closure/scope data setup, temporary data, etc.</p>
+      </div>
+      <div class="tile">
+          <h4>Robust and easy integration testing</h4>
+          <p>Learn how Go has rendered third party, HTTP servers & clients testing a breeze.</p>
+          <p>We will build our own APIs and client in order to understand all the ways how to deal tests our HTTP services.</p>
+      </div>
+    </div>
+    <div class="tiles">
+      <div class="tile">
+        <h4>IO package composition</h4>
+        <p>By building our own hasher program, we will learn one of the most important aspect of Go: IO composition.</p>
+      </div>
+      <div class="tile">
+        <h4>Concurrency</h4>
+        <p>By mimicking our own miner we will learn the necessary building blocks of various packages used for concurrency.</p>
+      </div>
+      <div class="tile">
+        <h4>Professional Go tips & tricks</h4>
+        <p>Going over packages, let's learn some useful and underused techniques that will make your code shorter and simpler!</p>
+      </div>
+    </div>    
+    <div class="tiles">
+      <div class="tile">
+        <h4>Error management</h4>
+        <p>How to simply handle errors and design encapsulated errors APIs. We will learn also what good logging is and errors wrapping.</p>
+      </div>
+      <div class="tile">
+        <h4>HTTP APIs and JSON</h4>
+        <p>We cover all there is to know about the standard library when it comes to JSON APIs as well as simple HTTP tracing, monitoring and race detection.</p>
+      </div>
+      <div class="tile">
+        <h4>Design patterns in Go</h4>
+        <p>We will learn important design patterns (GoF), how to apply them in Go and how they make your code more open for modifications.</p>
+      </div>
+    </div>    
 {{ end }}
