add workshop number three

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,9 +4,7 @@
   <nav>
     <ul>
       <li><a href="#security">Security</a></li>
-      <li><a href="#development">Development</a></li>
-      <li><a href="/workshops">Workshops</a></li>
-      <li><a href="#product">Product</a></li>
+      <li><a href="/workshops">Go Workshops</a></li>
     </ul>
   </nav>
 </div>
@@ -46,22 +44,26 @@
       </div>
     </div>
   </section>
-  <section id="development">
-    <h2>Development</h2>
-    <p>Expertise to delivers scalable and secure products.</p>
-  </section>
   <section id="training">
-    <h2 class="right">Workshops and training</h2>
+    <h2 class="right">Go Workshops and training</h2>
     <p>Learn Production Go in our hands-on 2 days workshops</p>
-    <p></p>
-    <ul>
-      <li>Latest professional test driven Go</li>
-      <li>Seasoned Trainers</li>
-      <li>1 week post support</li>
-    </ul>
+    <div class="tiles">
+      <div class="tile">
+          <h4>Professional Go</h4>
+          <p>Your customers expect reliable and tested code in their production systems!</p>
+          <p>In workshops, we teach the best ways to test and leverage the Go standard library first.</p>
+      </div>
+      <div class="tile">
+          <h4>Hands-on Trainers</h4>
+          <p>Workshops are conducted by seniors that work on advanced platforms everyday.</p>
+          <p>A proven track record for pragmatic and tested solutions, using their real life code examples when tutoring.</p>
+      </div>
+      <div class="tile">
+          <h4>One week post support</h4>
+          <p>Post workshop, we provide a week support for any remaining questions or topic.</p>
+          <p>Via video calls sessions we address together your challenges.</p>
+      </div>
+    </div>
     <div class="center"><a class="button" href="/workshops">See our workshops!</a></div>
-  </section>
-  <section id="product">
-    <h2>Product</h2>
   </section>
 {{ end }}
