--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,7 +4,7 @@
   <nav>
     <ul>
       <li><a href="#security">Security</a></li>
-      <li><a href="/workshops">Go Workshops</a></li>
+      <li><a href="/workshops">Workshops</a></li>
     </ul>
   </nav>
 </div>
@@ -12,8 +12,8 @@
 
 {{ define "main" }}
   <section id="rekon">
-      <p>Simple, modern software.</p>
       <p>Continuous security.</p>
+      <p>Hands-on trainings</p>
   </section>
 
   <section id="security">
@@ -45,22 +45,22 @@
     </div>
   </section>
   <section id="training">
-    <h2 class="right">Go Workshops and training</h2>
-    <p>Learn Production Go in our hands-on 2 days workshops</p>
+    <h2 class="right">Workshops</h2>
+    <p>Learn Production and Test Driven Go with our 2 days hands-on workshops</p>
     <div class="tiles">
       <div class="tile">
           <h4>Professional Go</h4>
-          <p>Your customers expect reliable and tested code in their production systems!</p>
-          <p>In workshops, we teach the best ways to test and leverage the Go standard library first.</p>
+          <p>Your customers expect reliable, test driven code in their production systems!</p>
+          <p>During 2 days, we implement a real product, learn key concepts and how to best leverage the ecosystem.</p>
       </div>
       <div class="tile">
           <h4>Hands-on Trainers</h4>
           <p>Workshops are conducted by seniors that work on advanced platforms everyday.</p>
-          <p>A proven track record for pragmatic and tested solutions, using their real life code examples when tutoring.</p>
+          <p>A proven track record for pragmatic and tested solutions, using their real life solutions when tutoring.</p>
       </div>
       <div class="tile">
           <h4>One week post support</h4>
-          <p>Post workshop, we provide a week support for any remaining questions or topic.</p>
+          <p>Post workshop, we provide support for any remaining questions or topic.</p>
           <p>Via video calls sessions we address together your challenges.</p>
       </div>
     </div>
