review front page

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -12,19 +12,13 @@
 
 {{ define "main" }}
   <section id="rekon">
-      <p>Continuous security.</p>
-      <p>Hands-on trainings</p>
+      <p>Defend. Develop. Deliver.</p>
+      <p>Hands-on training #InfoSec #Go</p>
   </section>
 
   <section id="security">
     <h2 class="left">Security</h2>
-    <p class="text-center">Securing products at the right level.</p>
-    <ul>
-      <li>Component audits</li>
-      <li>Infra and cloud analysis</li>
-      <li>Code reviews</li>
-    </ul>
-    <div class="center"><a class="button" href="#">Our offers</a></div>
+    <p>We provide security review: API, Backend, Platform pentesting; Kubernetes, Infra, Cloud assessment & analysis.</p>
     <div class="appraisals">
       <div class="appraisal top-left">
         <h3>“Simon's security audit on our wallet component saved us money before going to any ANSSI certification.”</h3>
@@ -46,7 +40,7 @@
   </section>
   <section id="training">
     <h2 class="right">Workshops</h2>
-    <p>Learn Production and Test Driven Go with our 2 days hands-on workshops</p>
+    <p class="text-center">Learn Production and Test Driven Go with our 2 days hands-on workshops</p>
     <div class="tiles">
       <div class="tile">
           <h4>Professional Go</h4>
