--- a/assets/main.css
+++ b/assets/main.css
@@ -78,6 +78,7 @@ nav a:hover {
 
 section {
     margin-inline: 1em;
+    margin-bottom: 5em;
 }
 
 section p {
@@ -159,6 +160,7 @@ h2.right {
 
 .position {
     margin-top: 1em;
+    margin-bottom: 1em;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
