review security intro

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -18,7 +18,7 @@
 
   <section id="security">
     <h2 class="left">Security</h2>
-    <p>We provide security review: API, Backend, Platform pentesting; Kubernetes, Infra, Cloud assessment & analysis.</p>
+    <p>We provide security reviews, pentesting and analysis: <i>Codebases, Backend, API, Platform, CI/CD Pipelines, Kubernetes, Infra, Cloud.</i></p>
     <div class="appraisals">
       <div class="appraisal top-left">
         <h3>“Simon's security audit on our wallet component saved us money before going to any ANSSI certification.”</h3>
