Update brand green color

--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@
 html {
     scroll-behavior: smooth;
     --brand-color: #00326f;
-    --brand-green: #33db77; 
+    --brand-green: #10b981; 
     --white-color: #f4f4f4;
     --shawdow-color: #574ae2;
 }
