--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -11,9 +11,8 @@
 {{ end }}
 
 {{ define "main" }}
-  <section id="rekon">
+  <section class="transition">
       <p>Defend. Develop. Deliver.</p>
-      <p>Hands-on training #InfoSec #Go</p>
   </section>
 
   <section id="security">
@@ -38,6 +37,11 @@
       </div>
     </div>
   </section>
+  
+  <section class="transition">
+    <p>Hands-on training #InfoSec #Go</p>
+  </section>
+  
   <section id="training">
     <h2 class="right">Workshops</h2>
     <p class="text-center">Learn Production and Test Driven Go with our 2 days hands-on workshops</p>
